# tarpc_repro

client/: Cargo.toml
client/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs
