[package]
name = "service"
version = "0.1.0"
authors = ["James McMath <james@remind101.com>"]

[dependencies]
tarpc = { git = "https://github.com/google/tarpc", rev = "fafe569ebc4173096bbcf947be8f7c132d749958" }
tarpc-plugins = { git = "https://github.com/google/tarpc", rev = "fafe569ebc4173096bbcf947be8f7c132d749958" }
